--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "element-ui": "2.4.6",
+    "isexe": "^2.0.0",
     "js-cookie": "2.2.0",
     "node-sass": "^7.0.1",
     "normalize.css": "7.0.0",
