--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml"
   },
   "dependencies": {
+    "array-includes": "^3.1.5",
     "axios": "0.18.0",
     "element-ui": "2.4.6",
     "isexe": "^2.0.0",
